# wait-for-copr

./: .packit.yaml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  wait-for-copr.spec
wait_for_copr/: __init__.py
